--- a/FinalProject-AdventurerTextSim/FinalProject-AdventurerTextSim/Base.lproj/Main.storyboard
+++ b/FinalProject-AdventurerTextSim/FinalProject-AdventurerTextSim/Base.lproj/Main.storyboard
@@ -255,24 +255,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M2d-D0-e4Z">
-                                <rect key="frame" x="138" y="155" width="67" height="30"/>
-                                <state key="normal" title="Locations"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xx2-Dv-hbE">
-                                <rect key="frame" x="213" y="155" width="64" height="30"/>
-                                <state key="normal" title="Monsters"/>
-                            </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="80r-iq-pSs">
-                                <rect key="frame" x="31" y="201" width="354" height="585"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="80r-iq-pSs">
+                                <rect key="frame" x="0.0" y="168" width="414" height="645"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="discoveryCell" id="aRw-ox-Cwe">
-                                        <rect key="frame" x="0.0" y="28" width="354" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="dCell" textLabel="6hu-y7-p8v" detailTextLabel="SAi-t9-rB6" rowHeight="80" style="IBUITableViewCellStyleSubtitle" id="aRw-ox-Cwe">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aRw-ox-Cwe" id="1S6-my-3uT">
-                                            <rect key="frame" x="0.0" y="0.0" width="354" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6hu-y7-p8v">
+                                                    <rect key="frame" x="20" y="15.5" width="51.5" height="24"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Location:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SAi-t9-rB6">
+                                                    <rect key="frame" x="20" y="43" width="66.5" height="19.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -295,32 +303,27 @@
                         <constraints>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="9Cg-cc-IeQ" secondAttribute="trailing" constant="106" id="1so-WE-E1W"/>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="dCJ-V3-FAg" secondAttribute="bottom" constant="718" id="3Bh-6X-MPr"/>
-                            <constraint firstItem="xx2-Dv-hbE" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" constant="213" id="3hX-Pe-ASL"/>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="80r-iq-pSs" secondAttribute="bottom" constant="27" id="5ET-pQ-X5a"/>
                             <constraint firstItem="80r-iq-pSs" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" constant="31" id="9eS-sC-xqS"/>
-                            <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="M2d-D0-e4Z" secondAttribute="bottom" constant="628" id="C2r-PZ-xNl"/>
-                            <constraint firstItem="M2d-D0-e4Z" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" constant="111" id="HvP-gA-1Vb"/>
-                            <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="xx2-Dv-hbE" secondAttribute="trailing" constant="137" id="NeR-Zf-XNo"/>
                             <constraint firstItem="dCJ-V3-FAg" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" constant="16" id="Puv-xk-jCW"/>
-                            <constraint firstItem="M2d-D0-e4Z" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" constant="138" id="YiG-L5-ffK"/>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="80r-iq-pSs" secondAttribute="trailing" constant="29" id="bBz-Nx-hgy"/>
                             <constraint firstItem="80r-iq-pSs" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" constant="157" id="fjN-Vc-Wtr"/>
-                            <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="xx2-Dv-hbE" secondAttribute="bottom" constant="628" id="gh4-9o-vaY"/>
-                            <constraint firstItem="xx2-Dv-hbE" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" constant="111" id="i4H-Lx-cbK"/>
                             <constraint firstItem="9Cg-cc-IeQ" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" constant="67" id="lrt-6Y-Ve4"/>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="dCJ-V3-FAg" secondAttribute="trailing" constant="29" id="mz0-0d-oKg"/>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="9Cg-cc-IeQ" secondAttribute="bottom" constant="666" id="r75-C9-pmv"/>
                             <constraint firstItem="dCJ-V3-FAg" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" constant="350" id="rVh-rG-Sm3"/>
                             <constraint firstItem="9Cg-cc-IeQ" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" constant="107" id="rn2-pk-GCB"/>
-                            <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="M2d-D0-e4Z" secondAttribute="trailing" constant="209" id="tYq-P5-eWX"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Discoveries" image="Discoveries" id="cPa-gy-q4n"/>
+                    <connections>
+                        <outlet property="tableView" destination="80r-iq-pSs" id="ZxW-xd-9lY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749.27536231884062" y="359.59821428571428"/>
+            <point key="canvasLocation" x="773.91304347826087" y="462.72321428571428"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
