--- a/FinalProject-AdventurerTextSim/FinalProject-AdventurerTextSim/Base.lproj/Main.storyboard
+++ b/FinalProject-AdventurerTextSim/FinalProject-AdventurerTextSim/Base.lproj/Main.storyboard
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -134,9 +136,8 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="122"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iMv-cq-1AD">
-                                    <rect key="frame" x="371" y="0.0" width="35" height="35"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iMv-cq-1AD">
+                                    <rect key="frame" x="350" y="16" width="35" height="35"/>
                                     <state key="normal" image="help"/>
                                     <connections>
                                         <action selector="historyHelp:" destination="kzs-nT-vVQ" eventType="touchUpInside" id="NG3-En-Lxg"/>
@@ -151,9 +152,13 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
+                                <constraint firstItem="iMv-cq-1AD" firstAttribute="leading" secondItem="OpR-RL-asl" secondAttribute="leading" constant="350" id="36i-IH-jfk"/>
+                                <constraint firstAttribute="bottom" secondItem="iMv-cq-1AD" secondAttribute="bottom" constant="71" id="8tT-Fv-hOJ"/>
                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="2qH-Kh-K73" secondAttribute="trailing" constant="124" id="HDP-uy-c6u"/>
                                 <constraint firstItem="2qH-Kh-K73" firstAttribute="top" secondItem="OpR-RL-asl" secondAttribute="top" constant="65" id="R9C-vf-fIt"/>
+                                <constraint firstItem="iMv-cq-1AD" firstAttribute="top" secondItem="OpR-RL-asl" secondAttribute="top" constant="16" id="XZD-AM-Qoc"/>
                                 <constraint firstAttribute="bottom" secondItem="2qH-Kh-K73" secondAttribute="bottom" constant="21" id="fay-IP-4dM"/>
+                                <constraint firstAttribute="trailing" secondItem="iMv-cq-1AD" secondAttribute="trailing" constant="29" id="pcd-uB-u63"/>
                                 <constraint firstItem="2qH-Kh-K73" firstAttribute="leading" secondItem="OpR-RL-asl" secondAttribute="leading" constant="125" id="xbi-cU-79f"/>
                             </constraints>
                         </view>
@@ -162,41 +167,41 @@
                                 <rect key="frame" x="0.0" y="150" width="414" height="75"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vHB-ga-cXA" id="Ycf-ec-1YF">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="75"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="74.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Input:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xpE-67-wsg">
-                                            <rect key="frame" x="20" y="11" width="44" height="23.5"/>
+                                            <rect key="frame" x="20" y="11" width="44" height="23"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Output:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="skE-6g-unb">
-                                            <rect key="frame" x="20" y="40" width="58" height="21.5"/>
+                                            <rect key="frame" x="20" y="40" width="58" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yFO-Ih-Mtc">
-                                            <rect key="frame" x="81" y="11" width="0.0" height="21.5"/>
+                                            <rect key="frame" x="81" y="11" width="0.0" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1hu-1n-k7V">
-                                            <rect key="frame" x="97" y="40" width="0.0" height="21.5"/>
+                                            <rect key="frame" x="97" y="40" width="0.0" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location(x,y): " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xMc-k8-tfp">
-                                            <rect key="frame" x="217" y="11" width="108" height="21.5"/>
+                                            <rect key="frame" x="217" y="11" width="108" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gSb-BO-hRB">
-                                            <rect key="frame" x="333" y="11" width="0.0" height="21.5"/>
+                                            <rect key="frame" x="333" y="11" width="0.0" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -255,7 +260,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="80r-iq-pSs">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="80r-iq-pSs">
                                 <rect key="frame" x="0.0" y="168" width="414" height="645"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -263,18 +268,18 @@
                                         <rect key="frame" x="0.0" y="28" width="414" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aRw-ox-Cwe" id="1S6-my-3uT">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6hu-y7-p8v">
-                                                    <rect key="frame" x="20" y="15.5" width="51.5" height="24"/>
+                                                    <rect key="frame" x="20" y="14.5" width="51.5" height="24"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Location:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SAi-t9-rB6">
-                                                    <rect key="frame" x="20" y="43" width="66.5" height="19.5"/>
+                                                    <rect key="frame" x="20" y="42" width="66.5" height="19.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <nil key="textColor"/>
@@ -303,11 +308,11 @@
                         <constraints>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="9Cg-cc-IeQ" secondAttribute="trailing" constant="106" id="1so-WE-E1W"/>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="dCJ-V3-FAg" secondAttribute="bottom" constant="718" id="3Bh-6X-MPr"/>
-                            <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="80r-iq-pSs" secondAttribute="bottom" constant="27" id="5ET-pQ-X5a"/>
-                            <constraint firstItem="80r-iq-pSs" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" constant="31" id="9eS-sC-xqS"/>
+                            <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="80r-iq-pSs" secondAttribute="bottom" id="5ET-pQ-X5a"/>
+                            <constraint firstItem="80r-iq-pSs" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" id="9eS-sC-xqS"/>
                             <constraint firstItem="dCJ-V3-FAg" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" constant="16" id="Puv-xk-jCW"/>
-                            <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="80r-iq-pSs" secondAttribute="trailing" constant="29" id="bBz-Nx-hgy"/>
-                            <constraint firstItem="80r-iq-pSs" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" constant="157" id="fjN-Vc-Wtr"/>
+                            <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="80r-iq-pSs" secondAttribute="trailing" id="bBz-Nx-hgy"/>
+                            <constraint firstItem="80r-iq-pSs" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" constant="124" id="fjN-Vc-Wtr"/>
                             <constraint firstItem="9Cg-cc-IeQ" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" constant="67" id="lrt-6Y-Ve4"/>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="dCJ-V3-FAg" secondAttribute="trailing" constant="29" id="mz0-0d-oKg"/>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="9Cg-cc-IeQ" secondAttribute="bottom" constant="666" id="r75-C9-pmv"/>
@@ -349,7 +354,7 @@
         <image name="Discoveries" width="25" height="25"/>
         <image name="History" width="25" height="25"/>
         <image name="Play" width="25" height="25"/>
-        <image name="gameLogo" width="342" height="44"/>
+        <image name="gameLogo" width="342.44143676757812" height="44.30859375"/>
         <image name="gold" width="50" height="50"/>
         <image name="help" width="50" height="50"/>
     </resources>
